[gd_scene load_steps=5 format=3 uid="uid://d4jcuwb3v5hfi"]

[ext_resource type="Script" path="res://addons/godot_gpt/examples/chat/chat.gd" id="1_m74gb"]
[ext_resource type="PackedScene" uid="uid://di8cv15276ai6" path="res://addons/godot_gpt/examples/chat/chat_entry/chat_entry.tscn" id="2_2q4w4"]
[ext_resource type="Script" path="res://addons/godot_gpt/gpt_chat_request.gd" id="2_7v28p"]
[ext_resource type="PackedScene" uid="uid://ckmpdqurkchco" path="res://addons/godot_gpt/examples/common/prompt_input/prompt_input.tscn" id="4_37pu7"]

[node name="chat" type="Control" node_paths=PackedStringArray("gpt", "chat_history_scroll", "chat_history", "prompt_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m74gb")
gpt = NodePath("GPTChatRequest")
chat_history_scroll = NodePath("MarginContainer/VBoxContainer/ScrollContainer")
chat_history = NodePath("MarginContainer/VBoxContainer/ScrollContainer/chat_history")
prompt_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/prompt_input")
chat_entry_scene = ExtResource("2_2q4w4")

[node name="GPTChatRequest" type="HTTPRequest" parent="."]
script = ExtResource("2_7v28p")
api_key = "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"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="chat_history" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="prompt_input" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_37pu7")]
layout_mode = 2
placeholder_text = "Ask ChatGPT a question!"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="prompt_submitted" from="MarginContainer/VBoxContainer/HBoxContainer/prompt_input" to="." method="_on_prompt_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
